[gd_scene load_steps=2 format=3 uid="uid://bxoom65ggf0x0"]

[ext_resource type="Script" uid="uid://bhs2sypvf4av0" path="res://game_start_settings.gd" id="1_t53a1"]

[node name="GameStartSettings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_t53a1")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -90.0
offset_top = -64.0
offset_right = 90.0
offset_bottom = 64.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.18359, 0.18359, 0.18359, 1)

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 2
offset_left = 486.0
offset_top = 260.0
offset_right = 666.0
offset_bottom = 388.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Choose Your Opponent"
horizontal_alignment = 1

[node name="HumanButton" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Another Human"

[node name="AIButton" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Computer (AI)"

[node name="BackButton" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Back
"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -35.5
offset_top = -56.0
offset_right = 35.5
offset_bottom = 56.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label7" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "AI "
horizontal_alignment = 1

[node name="Label8" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Difficulty"

[node name="DifficultyButton" type="OptionButton" parent="VBoxContainer"]
layout_mode = 2
selected = 0
item_count = 2
popup/item_0/text = "Easy"
popup/item_0/id = 0
popup/item_1/text = "Hard"
popup/item_1/id = 2
